# wodl

./: .gitignore  Dockerfile  LICENSE  Procfile  README.md  discourse-post-draft.md  playground.py  pyproject.toml  railway.json
examples/: beginner-full-body.wodl  home-minimal.wodl  minimalist-3day.wodl  powerbuilding-5day.wodl  ppl-hypertrophy.wod  ppl-hypertrophy.wodl  push-pull-4day.wodl  rehab-achilles-alfredson.wodl  rehab-acl-postop.wodl  rehab-lbp-mcgill.wodl  rehab-rotator-cuff.wodl  upper-lower-strength.wod  upper-lower-strength.wodl
tests/: test_wod.py  test_wodl.py
wod/: __init__.py  cli.py  parser.py
wodl/: __init__.py  cli.py  parser.py  registry.py
